# johnny-sins-bot

./: .gitignore  README.md  auth-token.secret  config.json  docker-compose.yml  johnny-sins-bot.cabal  stack.yaml
app/: Main.hs
src/: Main.hs
src/Bot/: IO.hs  Utils.hs
